📚 Auto-update: News data refreshed - 2026-01-09 00:54 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -47526,5 +47526,93 @@
         "published": "Thu, 08 Jan 2026 22:20:34 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46547303\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/08/ces-2026-everything-revealed-from-nvidias-debuts-to-amds-new-chips-to-razers-ai-oddities/",
+        "title": "CES 2026: Everything revealed, from Nvidia\u2019s debuts to AMD\u2019s new chips to Razer\u2019s AI oddities",
+        "link": "https://techcrunch.com/2026/01/08/ces-2026-everything-revealed-from-nvidias-debuts-to-amds-new-chips-to-razers-ai-oddities/",
+        "published": "Fri, 09 Jan 2026 00:35:00 +0000",
+        "source": "TechCrunch",
+        "summary": "CES 2026\u00a0is in full swing in Las Vegas, with the show floor open to the public after a packed couple of days\u00a0occupied by\u00a0press conferences from the likes of Nvidia, Sony, and AMD\u00a0and previews from Sunday\u2019s Unveiled event."
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/08/data-security-startup-cyera-hits-9b-valuation-six-months-after-being-valued-at-6b/",
+        "title": "Data security startup Cyera hits $9B valuation six months after being valued at $6B",
+        "link": "https://techcrunch.com/2026/01/08/data-security-startup-cyera-hits-9b-valuation-six-months-after-being-valued-at-6b/",
+        "published": "Thu, 08 Jan 2026 23:59:56 +0000",
+        "source": "TechCrunch",
+        "summary": "Cyera raised another $400 million just six months after its last huge round."
+    },
+    {
+        "id": "https://www.theverge.com/tech/858858/pioneer-sphera-ces-2026",
+        "title": "Pioneer Sphera is bringing Dolby Atmos in cars to the people",
+        "link": "https://www.theverge.com/tech/858858/pioneer-sphera-ces-2026",
+        "published": "2026-01-08T18:38:17-05:00",
+        "source": "The Verge",
+        "summary": "I fully believe that once someone hears Dolby Atmos music in their car, they won't want anything else. The sonic envelopment turns your car cabin into an immersive, engaging experience. Every time I hear a demo - be it in a Rivian, Cadillac, or Mercedes - it leaves me energized and excited. But up to [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/859107/uk-prime-minister-x-ai-grok-deepfakes",
+        "title": "UK Prime Minister says &#8216;we will take action&#8217; on Grok&#8217;s disgusting deepfakes",
+        "link": "https://www.theverge.com/news/859107/uk-prime-minister-x-ai-grok-deepfakes",
+        "published": "2026-01-08T18:23:00-05:00",
+        "source": "The Verge",
+        "summary": "UK Prime Minister Keir Starmer says the country will take action against X following reports that the platform's Grok AI chatbot is generating sexualized deepfakes of adults and minors, as reported earlier by The Telegraph and Sky News. \"It's disgusting,\" Starmer says during an interview with Greatest Hits Radio. \"X need[s] to get their act [&#8230;]"
+    },
+    {
+        "id": "https://www.engadget.com/wearables/lumus-brought-a-massively-wider-fov-to-smartglasses-at-ces-2026-233245949.html?src=rss",
+        "title": "Lumus brought a massively wider FOV to smartglasses at CES 2026",
+        "link": "https://www.engadget.com/wearables/lumus-brought-a-massively-wider-fov-to-smartglasses-at-ces-2026-233245949.html?src=rss",
+        "published": "Thu, 08 Jan 2026 23:32:45 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Lumus got a major boost in brand recognition when one of its waveguides was selected for use in the <a class=\"link\" href=\"https://www.engadget.com/wearables/meta-ray-ban-display-review-chunky-frames-with-impressive-abilities-193127070.html\" target=\"_blank\">Meta Ray-Ban Display glasses</a>. But that already feels like old tech now because at CES 2026, the company brought some of its latest components to the show and based on what I saw, they seem poised to seriously elevate the optical quality"
+    },
+    {
+        "id": "https://github.com/embassy-rs/embassy",
+        "title": "Embassy: Modern embedded framework, using Rust and async",
+        "link": "https://github.com/embassy-rs/embassy",
+        "published": "Thu, 08 Jan 2026 23:00:45 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46547740\">Comments</a>"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/exclusive-razorpay-invites-banker-pitches-for-ipo-targets-rs-4500-crore-fundraise/articleshow/126420971.cms",
+        "title": "Exclusive: Razorpay invites banker pitches for IPO; targets Rs 4,500 crore fundraise",
+        "link": "https://economictimes.indiatimes.com/tech/technology/exclusive-razorpay-invites-banker-pitches-for-ipo-targets-rs-4500-crore-fundraise/articleshow/126420971.cms",
+        "published": "Fri, 09 Jan 2026 06:01:00 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Razorpay has begun formal preparations for a stock market debut, inviting merchant bankers to pitch for its IPO mandate, people familiar with the matter told ET. The digital payments firm is looking to raise up to Rs 4,500 in fresh capital."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/generative-agentic-ai-to-level-barriers-and-unlock-market-for-indian-cos/articleshow/126421124.cms",
+        "title": "Generative &amp; agentic AI to level barriers and unlock market for Indian cos: AWS executive",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/generative-agentic-ai-to-level-barriers-and-unlock-market-for-indian-cos/articleshow/126421124.cms",
+        "published": "Fri, 09 Jan 2026 06:00:00 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Will help firms navigate language barriers, regulatory regimes, says senior AWS exec"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/startups/ettech-interview-from-online-search-to-data-stacks-ai-is-forcing-a-reset-snowflake-ceo-sridhar-ramaswamy/articleshow/126420861.cms",
+        "title": "ETtech Interview: From online search to data stacks, AI is forcing a reset: Snowflake CEO Sridhar Ramaswamy",
+        "link": "https://economictimes.indiatimes.com/tech/startups/ettech-interview-from-online-search-to-data-stacks-ai-is-forcing-a-reset-snowflake-ceo-sridhar-ramaswamy/articleshow/126420861.cms",
+        "published": "Fri, 09 Jan 2026 06:00:00 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Sridhar Ramaswamy, who spent 15 years at Google and helmed the tech major\u2019s massive advertising business, said legacy players will find it hard to match the pace of startups such as OpenAI in web searches. IIT Madras alumnus Ramaswamy underscored India\u2019s importance as a key growth and talent hub for Snowflake that is investing in AI upskilling for its 500-plus local workforce. Edited excerpts:"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/elonn-musk-led-x-saw-ai-media-grievances-surge-post-grok-imagine-rollout-in-india/articleshow/126420172.cms",
+        "title": "Elon Musk-led X saw AI media grievances surge post Grok Imagine rollout in India",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/elonn-musk-led-x-saw-ai-media-grievances-surge-post-grok-imagine-rollout-in-india/articleshow/126420172.cms",
+        "published": "Fri, 09 Jan 2026 06:00:00 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Grievances filed with social media platform X in India against synthetic or manipulated media surged to an estimated 983 in September 2025, comprising more than half the total 1,959 complaints it received, up from zero in each of the preceding three months."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/et-graphics-ai-summit-lays-out-red-carpet-for-indias-sovereign-ai-dreams/articleshow/126419536.cms",
+        "title": "ET Graphics: AI Summit lays out red carpet for India\u2019s sovereign AI dreams",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/et-graphics-ai-summit-lays-out-red-carpet-for-indias-sovereign-ai-dreams/articleshow/126419536.cms",
+        "published": "Fri, 09 Jan 2026 06:00:00 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "As India accelerates efforts to build a sovereign AI stack, a dozen startups and institutions backed by the government\u2019s IndiaAI Mission are preparing to launch indigenous foundation models. Many of these launches are timed around the India AI Impact Summit next month."
     }
 ]
