📚 Auto-update: News data refreshed - 2026-01-09 02:53 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -47614,5 +47614,53 @@
         "published": "Fri, 09 Jan 2026 06:00:00 +0530",
         "source": "Tech-Economic Times",
         "summary": "As India accelerates efforts to build a sovereign AI stack, a dozen startups and institutions backed by the government\u2019s IndiaAI Mission are preparing to launch indigenous foundation models. Many of these launches are timed around the India AI Impact Summit next month."
+    },
+    {
+        "id": "https://www.theverge.com/news/859176/towerborne-launch-release-date-paid-offline",
+        "title": "Xbox\u2019s Towerborne is switching from a free-to-play game to a paid one",
+        "link": "https://www.theverge.com/news/859176/towerborne-launch-release-date-paid-offline",
+        "published": "2026-01-08T20:05:26-05:00",
+        "source": "The Verge",
+        "summary": "Towerborne, a side-scrolling action RPG published by Xbox Game Studios that has been available in early access, will officially launch on February 26th. But instead of launching as a free-to-play, always-on online game as originally planned, Towerborne is instead going to be a paid game that you can play offline. \"You will own the complete [&#8230;]"
+    },
+    {
+        "id": "https://kueda.net/blog/2026/01/06/why-i-left-inat/",
+        "title": "Why I Left iNaturalist",
+        "link": "https://kueda.net/blog/2026/01/06/why-i-left-inat/",
+        "published": "Fri, 09 Jan 2026 01:17:51 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46548940\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/besgnulinux-gnu-linux-distro-lightweight-lots-of-open-source-software/",
+        "title": "This lightweight distro loaded with apps is not your father's GNU/Linux - here's why",
+        "link": "https://www.zdnet.com/article/besgnulinux-gnu-linux-distro-lightweight-lots-of-open-source-software/",
+        "published": "Fri, 09 Jan 2026 02:00:35 GMT",
+        "source": "Latest news",
+        "summary": "Lightweight Linux distributions get a bad rap for shipping with minimal reinstalled software. Besgnulinux, loaded with old-school charm, is the exception."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/newsletters/morning-dispatch/snowflake-ceo-on-the-ai-wave-razorpay-joins-ipo-queue/articleshow/126425242.cms",
+        "title": "Snowflake CEO on AI, search &amp; more; Razorpay joins IPO queue",
+        "link": "https://economictimes.indiatimes.com/tech/newsletters/morning-dispatch/snowflake-ceo-on-the-ai-wave-razorpay-joins-ipo-queue/articleshow/126425242.cms",
+        "published": "Fri, 09 Jan 2026 07:06:06 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Happy Friday! Snowflake CEO Sridhar Ramaswamy spoke with ET about the impending overhaul of online search due to AI. This and more in today's ETtech Morning Dispatch."
+    },
+    {
+        "id": "https://inc42.com/buzz/no-takers-for-unacademy-mumbai-funding-2025-more/",
+        "title": "No Takers For Unacademy, Mumbai Funding 2025 & More",
+        "link": "https://inc42.com/buzz/no-takers-for-unacademy-mumbai-funding-2025-more/",
+        "published": "Fri, 09 Jan 2026 02:30:56 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"No Takers For Unacademy, Mumbai Funding 2025 &amp; More\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/FTR-Daily-Brief-70.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />upGrad-Unacademy M&#38;A Talks Collapse upGrad\u2019s bid to acquire rival Unacademy has fallen through. The Ronnie Screwvala-led edtech unicorn walked away&#8230;"
+    },
+    {
+        "id": "https://inc42.com/features/how-funding-valuations-and-execution-are-being-rewritten-in-ecommerce/",
+        "title": "How Funding, Valuations And Execution Are Being Rewritten In Ecommerce",
+        "link": "https://inc42.com/features/how-funding-valuations-and-execution-are-being-rewritten-in-ecommerce/",
+        "published": "Fri, 09 Jan 2026 01:30:51 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"How Funding, Valuations And Execution Are Being Rewritten In Ecommerce\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1021\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/ftr-100-5-1.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1361\" />For over a decade, ecommerce has functioned as the backbone of India\u2019s consumer internet story, repeatedly absorbing capital across market&#8230;"
     }
 ]
