📚 Auto-update: News data refreshed - 2026-01-09 03:58 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -47662,5 +47662,101 @@
         "published": "Fri, 09 Jan 2026 01:30:51 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"How Funding, Valuations And Execution Are Being Rewritten In Ecommerce\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1021\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/ftr-100-5-1.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1361\" />For over a decade, ecommerce has functioned as the backbone of India\u2019s consumer internet story, repeatedly absorbing capital across market&#8230;"
+    },
+    {
+        "id": "https://www.wired.com/story/ice-agent-jonathan-ross-renee-good-shooting-firearms-trainer-testimony/",
+        "title": "ICE Agent Who Reportedly Shot Renee Good Was a Firearms Trainer, Per Testimony",
+        "link": "https://www.wired.com/story/ice-agent-jonathan-ross-renee-good-shooting-firearms-trainer-testimony/",
+        "published": "Fri, 09 Jan 2026 03:19:26 +0000",
+        "source": "WIRED",
+        "summary": "Jonathan Ross told a federal court in December about his professional background, including \u201chundreds\u201d of encounters with drivers during enforcement actions, according to testimony obtained by WIRED."
+    },
+    {
+        "id": "https://news.ycombinator.com/item?id=46549444",
+        "title": "Show HN: Executable Markdown files with Unix pipes",
+        "link": "https://news.ycombinator.com/item?id=46549444",
+        "published": "Fri, 09 Jan 2026 02:29:12 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46549444\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/bluesound-pulse-cinema-review/",
+        "title": "Finally, I found a room-filling soundbar that makes a subwoofer unnecessary for me",
+        "link": "https://www.zdnet.com/article/bluesound-pulse-cinema-review/",
+        "published": "Fri, 09 Jan 2026 03:40:00 GMT",
+        "source": "Latest news",
+        "summary": "To fill your TV room with big, bold sound, you need a soundbar akin to the Bluesound Pulse Cinema."
+    },
+    {
+        "id": "https://www.zdnet.com/article/best-audio-ces-2026/",
+        "title": "The coolest audio gear I listened to at CES 2026 (including brain-reading headphones)",
+        "link": "https://www.zdnet.com/article/best-audio-ces-2026/",
+        "published": "Fri, 09 Jan 2026 03:35:00 GMT",
+        "source": "Latest news",
+        "summary": "I spent a week at CES finding the best audio products. These ones stood out the most."
+    },
+    {
+        "id": "https://www.zdnet.com/article/best-tvs-ces-2026/",
+        "title": "We saw dozens of TVs at CES 2026: Keep these 5 models on your radar this year",
+        "link": "https://www.zdnet.com/article/best-tvs-ces-2026/",
+        "published": "Fri, 09 Jan 2026 03:28:00 GMT",
+        "source": "Latest news",
+        "summary": "At the Las Vegas trade show, we're seeing several unique and premium offerings from the world's leading TV manufacturers."
+    },
+    {
+        "id": "https://www.zdnet.com/article/strapsicle-ipad-mini-case-ces-2026/",
+        "title": "My favorite Kindle accessory brand just released an iPad case at CES - and it's pure genius",
+        "link": "https://www.zdnet.com/article/strapsicle-ipad-mini-case-ces-2026/",
+        "published": "Fri, 09 Jan 2026 03:25:00 GMT",
+        "source": "Latest news",
+        "summary": "Strapsicle's new iPad mini case transforms your Apple tablet into a better e-reader - and it's designed with accessibility in mind."
+    },
+    {
+        "id": "https://www.zdnet.com/article/ohsnap-mcon-hands-on-ces-2026/",
+        "title": "This MagSafe accessory hidden in the CES halls is my sleeper pick for best of the show",
+        "link": "https://www.zdnet.com/article/ohsnap-mcon-hands-on-ces-2026/",
+        "published": "Fri, 09 Jan 2026 03:23:00 GMT",
+        "source": "Latest news",
+        "summary": "A more polished Ohsnap Mcon controller is being showcased at CES, and it's accompanied by some quirky companions."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/elon-musks-xai-to-build-20-billion-data-centre-in-mississippi/articleshow/126426315.cms",
+        "title": "Elon Musk's xAI to build $20 billion data centre in Mississippi",
+        "link": "https://economictimes.indiatimes.com/tech/technology/elon-musks-xai-to-build-20-billion-data-centre-in-mississippi/articleshow/126426315.cms",
+        "published": "Fri, 09 Jan 2026 08:47:02 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Elon Musk\u2019s xAI plans to invest $20 billion in a vast data centre in Southaven, Mississippi, the state\u2019s biggest-ever private project. The site will host \"the world's largest supercomputer\" with 2 gigawatts of computing power. The announcement comes as xAI faces scrutiny over its data centre projects in the Memphis area."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/tiktok-picked-by-fifa-as-video-content-partner-at-2026-world-cup/articleshow/126426142.cms",
+        "title": "TikTok picked by FIFA as video content partner at 2026 World Cup",
+        "link": "https://economictimes.indiatimes.com/tech/technology/tiktok-picked-by-fifa-as-video-content-partner-at-2026-world-cup/articleshow/126426142.cms",
+        "published": "Fri, 09 Jan 2026 08:33:56 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "FIFA has named TikTok its first preferred social media video platform at the men\u2019s World Cup. Creators will gain special access and limited match content at the 2026 tournament across North America. FIFA did not state the value of the deal, or details of any tender process or rival bidders."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/apple-card-switches-hands-but-no-immediate-changes-for-users/articleshow/126425962.cms",
+        "title": "Apple Card switches hands but no immediate changes for users",
+        "link": "https://economictimes.indiatimes.com/tech/technology/apple-card-switches-hands-but-no-immediate-changes-for-users/articleshow/126425962.cms",
+        "published": "Fri, 09 Jan 2026 08:19:37 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Apple has confirmed JPMorgan will become the new issuer of the Apple Card, replacing Goldman Sachs, with no changes for customers. Rewards, savings features and Mastercard access will stay the same during the transition. The deal, closing in about two years, solidifies JPMorgan\u2019s leading position in the US credit card market."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/eu-antitrust-regulators-to-decide-on-googles-wiz-deal-by-february-10/articleshow/126425812.cms",
+        "title": "EU antitrust regulators to decide on Google's Wiz deal by February 10",
+        "link": "https://economictimes.indiatimes.com/tech/technology/eu-antitrust-regulators-to-decide-on-googles-wiz-deal-by-february-10/articleshow/126425812.cms",
+        "published": "Fri, 09 Jan 2026 08:11:50 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "EU antitrust officials will decide by February 10 on Google owner Alphabet\u2019s planned $32 billion purchase of cybersecurity firm Wiz. Announced last March, the acquisition secured the US green light in November last year. Tech \u200ddeals have in recent years faced \u200cintense regulatory scrutiny on concerns that dominant companies may further boost their market power."
+    },
+    {
+        "id": "https://inc42.com/startups/how-arctus-aerospace-plans-to-disrupt-earth-observation-without-satellites/",
+        "title": "How Arctus Aerospace Plans To Disrupt Earth Observation Without Satellites",
+        "link": "https://inc42.com/startups/how-arctus-aerospace-plans-to-disrupt-earth-observation-without-satellites/",
+        "published": "Fri, 09 Jan 2026 03:00:53 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/Arctus-ftr-1.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />An unmanned aerial vehicle (UAV) flying close to the ground and capturing high-resolution images to thrash out a digital map&#8230;"
     }
 ]
