📚 Auto-update: News data refreshed - 2026-01-09 04:37 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -47758,5 +47758,37 @@
         "published": "Fri, 09 Jan 2026 03:00:53 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/Arctus-ftr-1.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />An unmanned aerial vehicle (UAV) flying close to the ground and capturing high-resolution images to thrash out a digital map&#8230;"
+    },
+    {
+        "id": "https://github.com/anomalyco/opencode/issues/7410",
+        "title": "Anthropic bans use of API in OpenCode CLI tool",
+        "link": "https://github.com/anomalyco/opencode/issues/7410",
+        "published": "Fri, 09 Jan 2026 03:44:35 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46549823\">Comments</a>"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/elon-musks-xai-quarterly-net-loss-widens-to-1-46-billion-bloomberg/articleshow/126426687.cms",
+        "title": "Elon Musk's xAI quarterly net loss widens to $1.46 billion: Bloomberg",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/elon-musks-xai-quarterly-net-loss-widens-to-1-46-billion-bloomberg/articleshow/126426687.cms",
+        "published": "Fri, 09 Jan 2026 09:14:19 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Elon Musk\u2019s AI firm xAI posted a net loss of $1.46 billion for the September quarter, despite revenue almost doubling to $107 million, according to a report by Bloomberg. However, when contacted \u200cby \u200dReuters for comment, xAI \u200dreplied with the message, \"Legacy Media Lies.\" This comes as xAI announced a $20 billion funding round to expand its AI capabilities."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/elon-musks-xai-quarterly-net-loss-widens-to-1-46-billion-bloomberg/articleshow/126426627.cms",
+        "title": "Elon Musk's xAI quarterly net loss widens to $1.46 billion: Bloomberg",
+        "link": "https://economictimes.indiatimes.com/tech/technology/elon-musks-xai-quarterly-net-loss-widens-to-1-46-billion-bloomberg/articleshow/126426627.cms",
+        "published": "Fri, 09 Jan 2026 09:14:19 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Elon Musk\u2019s AI firm xAI posted a net loss of $1.46 billion for the September quarter, despite revenue almost doubling to $107 million, according to a report by Bloomberg. However, when contacted \u200cby \u200dReuters for comment, xAI \u200dreplied with the message, \"Legacy Media Lies.\" This comes as xAI announced a $20 billion funding round to expand its AI capabilities."
+    },
+    {
+        "id": "https://yourstory.com/2026/01/online-grocers-and-their-picky-customers-good-monk-rethinks-nutrition",
+        "title": "Online grocers and their picky customers; Good Monk rethinks nutrition",
+        "link": "https://yourstory.com/2026/01/online-grocers-and-their-picky-customers-good-monk-rethinks-nutrition",
+        "published": "Fri, 09 Jan 2026 02:00:00 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "A shift in consumer mindset has prompted a host of players to launch premium offerings. Good Monk offers tasteless powders that blend into daily food. Trans comedian Alok Menon is touring to ask harder questions about how we stay alive together."
     }
 ]
