📚 Auto-update: News data refreshed - 2026-01-09 06:18 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -47814,5 +47814,21 @@
         "published": "Fri, 09 Jan 2026 10:04:54 +0530",
         "source": "Tech-Economic Times",
         "summary": "India is stepping up plans to build its own graphics processors after talks between minister Ashwini Vaishnaw and Nvidia executives. The discussions covered sovereign GPUs and local manufacturing of advanced AI devices. The government is also expanding subsidised access to GPUs to boost domestic AI development."
+    },
+    {
+        "id": "https://www.wired.com/story/squarespace-promo-code/",
+        "title": "20% Squarespace Promo Codes | January 2026",
+        "link": "https://www.wired.com/story/squarespace-promo-code/",
+        "published": "Fri, 09 Jan 2026 06:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Get 10% off your next website with exclusive Squarespace discount code for 2026, 50% off plans, and more top coupons."
+    },
+    {
+        "id": "https://old.reddit.com/r/LocalLLaMA/comments/1q7qcux/the_no_fakes_act_has_a_fingerprinting_trap_that/",
+        "title": "The No Fakes Act Has a \"Fingerprinting\" Trap That Kills Open Source",
+        "link": "https://old.reddit.com/r/LocalLLaMA/comments/1q7qcux/the_no_fakes_act_has_a_fingerprinting_trap_that/",
+        "published": "Fri, 09 Jan 2026 05:01:24 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46550231\">Comments</a>"
     }
 ]
