📚 Auto-update: News data refreshed - 2026-01-09 07:18 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -47830,5 +47830,37 @@
         "published": "Fri, 09 Jan 2026 05:01:24 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46550231\">Comments</a>"
+    },
+    {
+        "id": "https://www.wired.com/story/nzxt-discount-code/",
+        "title": "NZXT Discount Codes: 50% Off in January 2026",
+        "link": "https://www.wired.com/story/nzxt-discount-code/",
+        "published": "Fri, 09 Jan 2026 06:30:00 +0000",
+        "source": "WIRED",
+        "summary": "Save 50%, plus up to $250 with NZXT promo codes and discounts."
+    },
+    {
+        "id": "https://www.wired.com/story/skullcandy-discount-code/",
+        "title": "Skullcandy Discount Codes and Deals: Up to 47% Off Top Products",
+        "link": "https://www.wired.com/story/skullcandy-discount-code/",
+        "published": "Fri, 09 Jan 2026 06:30:00 +0000",
+        "source": "WIRED",
+        "summary": "Save on Skullcandy audio with 47% off Crusher Evo headphones, 36% off Crusher ANC 2 noise-canceling headphones, and more with top deals."
+    },
+    {
+        "id": "https://www.economist.com/leaders/2026/01/08/do-not-mistake-a-resilient-global-economy-for-populist-success",
+        "title": "Do not mistake a resilient global economy for populist success",
+        "link": "https://www.economist.com/leaders/2026/01/08/do-not-mistake-a-resilient-global-economy-for-populist-success",
+        "published": "Fri, 09 Jan 2026 06:43:27 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46550777\">Comments</a>"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/google-vs-chatgpt-ai-agents-will-transform-online-search-google-faces-stiff-challenge-from-openai-snowflake-ceo/articleshow/126429845.cms",
+        "title": "AI agents will transform online search; Google faces stiff challenge from OpenAI: Snowflake CEO",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/google-vs-chatgpt-ai-agents-will-transform-online-search-google-faces-stiff-challenge-from-openai-snowflake-ceo/articleshow/126429845.cms",
+        "published": "Fri, 09 Jan 2026 12:45:03 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "AI is transforming online search, with startups like OpenAI innovating faster than legacy firms, said Snowflake CEO Sridhar Ramaswamy. AI-powered browsers and tools are reshaping how users access information. While cloud giants compete, Snowflake remains confident in its specialised analytics platforms and long-term relevance in the market."
     }
 ]
